<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Volume Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_as_new_profile">Save As New Profile</string>
    <string name="action_lock_volume">Lock Volume</string>
    <string name="action_unlock_volume">Unlock Volume</string>
    <string name="action_rename_profile">Rename</string>
    <string name="action_edit_profile">Edit</string>
    <string name="action_delete_profile">Delete</string>
    <string name="action_launch_application">Launch Application</string>
    <string name="action_about">About</string>
    <string name="title_activity_preference">Settings</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="ringer_mode_title">Ringer Mode</string>
    <string name="alarm_volume_title">Alarm</string>
    <string name="music_volume_title">Music/Media</string>
    <string name="ring_volume_title">Ring</string>
    <string name="notification_volume_title">Notification</string>
    <string name="ring_notification_volume_title">Ring/Notification</string>
    <string name="voicecall_volume_title">Voice Call</string>
    <string name="system_volume_title">System</string>
    <string name="ringer_mode_normal">Normal</string>
    <string name="ringer_mode_vibrate">Vibrate</string>
    <string name="ringer_mode_silent">Silent</string>
    <string name="zerozero">00/00</string>
    <string name="page_title_volumeedit">Volumes</string>
    <string name="page_title_profileedit">Profiles</string>
    <string name="msg_profile_notfound">"%1$s" not found.</string>
    <string name="msg_profile_applied">"%1$s" applied.</string>
    <string name="msg_volume_locked">Volume is locked.</string>
    <string name="vibrate_on_profile_change">Vibrate</string>
    <string name="display_toast_on_profile_change">Display Toast</string>
    <string name="play_sound_on_volume_change">Play Sound</string>
    <string name="display_toast_on_volume_lock">Display Toast when Lock</string>
    <string name="sound_level_alert_hack">Sony/SEMC Sound Level Alert Hack</string>
    <string name="detect_device_function">Detect Device</string>
    <string name="volume_link_notification">Link Notification and Ring</string>
    <string name="volume_link_system">Link System and Ring</string>
    <string name="volume_link_ringermode">Link Ringer mode and Ring</string>
    <string name="pref_category_on_profile_apply">On Profile Apply</string>
    <string name="pref_category_on_volume_change">On Volume Change</string>
    <string name="pref_category_volume_lock">Volume Lock</string>
    <string name="pref_category_misc">Misc</string>
    <string name="pref_category_device">Device</string>
    <string name="input_dialog_description">Input New Profile Name</string>
    <string name="input_dialog_positive_button">Save</string>
    <string name="input_dialog_rename_button">Rename</string>
    <string name="input_dialog_negative_button">Cancel</string>
    <string name="title_activity_plugin_edit">Volume Profile</string>
    <string name="title_activity_profile_edit">Profile Edit</string>
    <string name="action_save_profile">Save</string>
    <string name="action_cancel_edit_profile">Cancel</string>
    <string name="ringer_mode_lock_title">Lock</string>
    <string name="alarm_volume_lock_title">Lock</string>
    <string name="music_volume_lock_title">Lock</string>
    <string name="ring_volume_lock_title">Lock</string>
    <string name="notification_volume_lock_title">Lock</string>
    <string name="voicecall_volume_lock_title">Lock</string>
    <string name="system_volume_lock_title">Lock</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="profile_list_item">Dummy Profile Name</string>
    <string name="link_notification_and_ringer_volume">Link Notification and Ringer Volume</string>
    <string name="title_activity_about">About Volume Profile</string>
    <string name="about_version_title">Version:</string>
    <string name="about_changelog_title">Changes:</string>
    <string name="about_copyright">Copyright(R) 2013 reczcgo All rights reserved.</string>
    <string name="action_lock_all">Lock All</string>
    <string name="action_unlock_all">Unlock All</string>
	<string name="plugin_profile_select_title">Change Profile</string>
	<string name="plugin_volumelock_select_title">Change Volume Lock</string>
	<string name="volumelock_lock">Lock</string>
	<string name="volumelock_unlock">Unlock</string>
	<string name="volumelock_toggle">Toggle</string>
	<string name="plugin_clearaudioplus_changestate">Change ClearAudio+</string>
	<string name="clearaudioplus_state_on">On</string>
	<string name="clearaudioplus_state_off">Off</string>
	<string name="clearaudioplus_state_toggle">Toggle</string>
	
	<!-- do not translate blow -->
    <string name="lock_checkbox_tag">lockCheckBoxTag</string>

</resources>
