<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_save_as_new_profile"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_save_as_new_profile"
        android:icon="@android:drawable/ic_menu_save"
        />

    <item
        android:id="@+id/action_lock_volume"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_lock_volume"
        android:icon="@android:drawable/ic_partial_secure"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"
        android:icon="@android:drawable/ic_menu_help"
        />

</menu>
