<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".main.AboutActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_appname"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:id="@+id/about_version_title"
	        android:text="@string/about_version_title" />

   	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:id="@+id/about_version"
	        android:text="version" />
	
    </LinearLayout>
	    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/about_changelog_title"
	        android:text="@string/about_changelog_title" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/about_changelog" />
        
    </LinearLayout>
	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_copyright"
        android:text="@string/about_copyright" />

</LinearLayout>
