<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.VolumeProfileActivity" >

    <LinearLayout
        android:id="@+id/setting_vibrate_on_profile_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vibrate_on_profile_change_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/vibrate_on_profile_change"
            android:textAppearance="?android:attr/textAppearance" />

        <CheckBox
            android:id="@+id/vibrate_on_profile_change_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_toast_on_profile_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/display_toast_on_profile_change_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/display_toast_on_profile_change"
            android:textAppearance="?android:attr/textAppearance" />

        <CheckBox
            android:id="@+id/display_toast_on_profile_change_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_sound_on_volume_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/play_sound_on_volume_change_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/play_sound_on_volume_change"
            android:textAppearance="?android:attr/textAppearance" />

        <CheckBox
            android:id="@+id/play_sound_on_volume_change_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sound_alert_hack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sound_alert_hack_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/sound_alert_hack"
            android:textAppearance="?android:attr/textAppearance" />

        <CheckBox
            android:id="@+id/sound_alert_hack_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right" />
    </LinearLayout>

</LinearLayout>